--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"dependencies": {
 		"socket.io": "latest",
 		"express": "latest",
-		"jade": "latest"
+		"jade": "latest",
+		"crypto": "latest"
 	},
 	"author": "veggiesaurus",
 	"contributors": [ 
