--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"socket.io": "latest",
 		"express": "latest",
 		"jade": "latest",
-		"crypto": "latest"
+		"crypto": "latest",
+		"shortid": "latest"
 	},
 	"author": "veggiesaurus",
 	"contributors": [ 
