departments implemented, using secrets.json file for passwords

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "RealtimePollingUCT",
   "version": "0.0.2",
-  "description": "Real time polling for UCT Physics",
+  "description": "Real time polling for UCT",
   "dependencies": {
     "crypto": "0.0.3",
     "express": "^4.9.8",
