--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "RealtimePollingUCT",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Real time polling for UCT",
-  "dependencies": {
-    "crypto": "0.0.3",
-    "express": "^4.9.8",
-    "jade": "^1.7.0",    
-    "shortid": "^2.0.1",
-    "socket.io": "^1.1.0"
+  "dependencies": {    
+    "express": "^4.12.3",
+    "jade": "^1.9.2",    
+    "shortid": "^2.2.2",
+    "socket.io": "^1.1.0",
+	"mongoose": "3.8.26"
   },
   "author": "veggiesaurus",
   "contributors": [
