initial mongoose support (flat DB)

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "RealtimePollingUCT",
   "version": "0.1.0",
   "description": "Real time polling for UCT",
-  "dependencies": {    
+  "dependencies": {
     "express": "^4.12.3",
-    "jade": "^1.9.2",    
+    "jade": "^1.9.2",
     "shortid": "^2.2.2",
     "socket.io": "^1.1.0",
-	"mongoose": "3.9.7"
+	"mongoose": "^4.0.1"
   },
   "author": "veggiesaurus",
   "contributors": [
