--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jade": "^1.9.2",
     "shortid": "^2.2.2",
     "socket.io": "^1.1.0",
-	"mongoose": "^4.0.1"
+    "mongodb": "^2.0.27",
+    "basic-auth": "^1.0.0"
   },
   "author": "veggiesaurus",
   "contributors": [
