--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongodb": "^2.0.27",
     "node-sass": "^3.2.0",
     "node-sass-middleware": "^0.9.0",
+    "serve-favicon": "^2.3.0",
     "shortid": "^2.2.2",
     "socket.io": "^1.1.0"
   },
